# elo2

./: .gitignore  Cargo.toml
database/: .env  build_db.bat  compile_schema.bat  compile_schema.sh  schema.dbml  schema.sql  update_db.sh
src/: index.rs  lib.rs  main.rs
src/entities/: doubles.rs  mod.rs  players.rs  prelude.rs  singles.rs
static/: style.css
templates/: add_game1.html  add_game2.html  add_player.html  header1.html  header2.html  header_index.html  history.html  index.html  player.html
