[package]
name = "elo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
lazy_static = "1"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-actix-rustls", "macros", "with-chrono", "uuid", "mock" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
